--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ body{font-family:Inter,sans-serif;background:#f1f5f9}
 
 <script>
 /* ================= CONFIG ================= */
+// Cần kiểm tra lại SHEET_ID và GID của bạn
 const SHEET_ID = '14ntbPzHZdUEBAx7FxwEfpO0wBjyqaxNzXVYYphe_q2A';
 const GID = '61368668';
 const QUERY = 'select A,B,C,D,E,F,G,H,I,J';
@@ -75,7 +76,7 @@ const URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?gid=${GI
 const $ = id => document.getElementById(id);
 let DATA = [], VIEW = [];
 
-/* ================= UTIL (ĐÃ SỬA HÀM driveToImage) ================= */
+/* ================= UTIL (ĐÃ SỬA VÀ TỐI ƯU HÀM driveToImage) ================= */
 function cleanJSON(t){
     return JSON.parse(
         t.replace('/*O_o*/','')
@@ -88,7 +89,7 @@ function driveToImage(url){
     if(!url) return '';
     const s = url.toString().trim();
 
-    // Regex để trích xuất FILE_ID từ các dạng URL Google Drive phổ biến
+    // Regex tìm kiếm ID sau: /file/d/ hoặc /d/ hoặc id=
     let fileId = '';
     const match = s.match(
         /(?:file\/d\/|d\/|id=)([a-zA-Z0-9_-]{20,})/
@@ -97,13 +98,13 @@ function driveToImage(url){
     if (match) {
         fileId = match[1];
     } else if (s.length > 20 && s.match(/^[a-zA-Z0-9_-]+$/)) {
-        // Kiểm tra nếu chuỗi chỉ là ID tệp trực tiếp
+        // Xử lý trường hợp chuỗi chỉ là ID tệp trực tiếp
         fileId = s;
     }
 
     if (!fileId) return '';
 
-    // Trả về URL dạng 'uc?export=view' - Cần đảm bảo tệp được chia sẻ công khai!
+    // Trả về URL dạng 'uc?export=view' - Yêu cầu tệp phải được chia sẻ công khai!
     return `https://drive.google.com/uc?export=view&id=${fileId}`;
 }
 
@@ -121,13 +122,13 @@ async function loadData(){
             price: r.c?.[3]?.v || '',
             deposit: r.c?.[4]?.v || '',
             commission: r.c?.[5]?.v || '',
-            // r.c?.[6]?.v là link ảnh chính (nếu có)
+            // Lấy 3 liên kết ảnh từ cột H, I, J
             images: [
-                driveToImage(r.c?.[7]?.v), // Cột H
-                driveToImage(r.c?.[8]?.v), // Cột I
-                driveToImage(r.c?.[9]?.v)  // Cột J
+                driveToImage(r.c?.[7]?.v), 
+                driveToImage(r.c?.[8]?.v), 
+                driveToImage(r.c?.[9]?.v)
             ].filter(Boolean)
-        })).filter(i=>i.address); // Chỉ lấy các dòng có địa chỉ
+        })).filter(i=>i.address);
 
         VIEW = [...DATA];
         $('loading').classList.add('hidden');
