Replace rental data page with property search page

--- a/index.html
+++ b/index.html
@@ -2,259 +2,165 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1.0" />
-<title>DỮ LIỆU NHÀ THUÊ</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Tra cứu tài sản</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
 <style>
-body{font-family:Inter,sans-serif;background:#f1f5f9}
-.card{border-radius:18px}
-.badge{font-size:12px;padding:4px 10px;border-radius:999px}
-.thumb{
-    height:110px;
-    border-radius:14px;
-    /* Sử dụng background-size: cover để hình ảnh trông đẹp hơn khi load */
-    background:#e5e7eb center/cover no-repeat;
-    cursor:pointer
-}
-#imgModal{touch-action:none;z-index:50}
-#modalImg{
-    max-width:95vw;
-    max-height:90vh;
-    transform-origin:center;
-    transition:transform .12s ease;
-    user-select:none
-}
+body { font-family: Inter, sans-serif; background:#f1f5f9; }
+.card { border-radius:16px; }
+.badge { font-size:12px; padding:4px 10px; border-radius:999px; }
 </style>
 </head>
 
-<body>
+<body class="min-h-screen">
 
-<header class="bg-gradient-to-r from-indigo-700 to-blue-700 text-white sticky top-0 z-20 shadow">
-    <div class="max-w-3xl mx-auto px-4 py-4 space-y-3">
-        <h1 class="text-2xl font-extrabold text-center">DỮ LIỆU NHÀ THUÊ</h1>
-        <div class="flex gap-2">
-            <input id="search" placeholder="🔍 Địa chỉ | SĐT | Giá | Hoa hồng"
-                class="flex-1 p-3 rounded-xl text-gray-800" disabled>
-            <button id="btn" class="bg-white/20 px-4 rounded-xl font-semibold text-sm" disabled>
-                Tìm
-            </button>
-        </div>
+<!-- HEADER -->
+<header class="bg-gradient-to-r from-blue-600 to-indigo-600 text-white sticky top-0 z-10 shadow">
+  <div class="max-w-3xl mx-auto px-4 py-4 space-y-3">
+    <h1 class="text-xl font-bold text-center">Tra Cứu Thông Tin Tài Sản</h1>
+
+    <div class="flex gap-2">
+      <input id="search" type="text"
+        placeholder="🔍 Nhập địa chỉ, SĐT, giá..."
+        class="flex-1 p-3 rounded-xl text-gray-800 text-sm"
+        disabled>
+      <button id="btn"
+        class="bg-white/20 px-4 rounded-xl font-semibold text-sm"
+        disabled>
+        Tìm
+      </button>
     </div>
+  </div>
 </header>
 
-<main class="max-w-3xl mx-auto p-3 space-y-4">
-    <div id="loading" class="bg-white p-6 rounded-xl shadow text-center">
-        <div class="w-8 h-8 border-4 border-gray-200 border-t-blue-600 rounded-full animate-spin mx-auto mb-3"></div>
-        <p class="text-sm">Đang tải dữ liệu...</p>
-    </div>
+<!-- CONTENT -->
+<main class="max-w-3xl mx-auto p-3 space-y-3">
 
-    <div id="list" class="space-y-4 hidden"></div>
+  <div id="loading" class="bg-white p-6 rounded-xl shadow text-center">
+    <div class="w-8 h-8 border-4 border-gray-200 border-t-blue-600 rounded-full animate-spin mx-auto mb-3"></div>
+    <p class="text-sm">Đang tải dữ liệu...</p>
+  </div>
 
-    <div id="empty" class="hidden bg-yellow-50 border-l-4 border-yellow-500 p-4 text-sm">
-        Không tìm thấy tài sản phù hợp
-    </div>
+  <div id="list" class="space-y-3 hidden"></div>
+
+  <div id="empty" class="hidden bg-yellow-50 border-l-4 border-yellow-500 p-4 mt-4 text-sm">
+    Không tìm thấy kết quả phù hợp
+  </div>
+
 </main>
 
-<div id="imgModal" class="fixed inset-0 bg-black/90 hidden flex items-center justify-center">
-    <div id="imgCount" class="absolute top-4 left-4 text-white text-sm"></div>
-    <button onclick="closeModal()" class="absolute top-4 right-4 text-white text-3xl">✕</button>
-    <img id="modalImg">
-</div>
-
 <script>
-/* ================= CONFIG ================= */
-// Cần kiểm tra lại SHEET_ID và GID của bạn
+/* ================== CONFIG ================== */
 const SHEET_ID = '14ntbPzHZdUEBAx7FxwEfpO0wBjyqaxNzXVYYphe_q2A';
 const GID = '61368668';
-const QUERY = 'select A,B,C,D,E,F,G,H,I,J';
-// Thêm timestamp để tránh cache khi fetch data
-const URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?gid=${GID}&tqx=out:json&tq=${encodeURIComponent(QUERY)}&_=${Date.now()}`;
+const URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?gid=${GID}&tqx=out:json&tq=${encodeURIComponent('select A,B,C,D,E,F,G')}`;
 
+/* ================== STATE ================== */
+let DATA = [];
+
+/* ================== HELPERS ================== */
 const $ = id => document.getElementById(id);
-let DATA = [], VIEW = [];
 
-/* ================= UTIL (ĐÃ SỬA VÀ TỐI ƯU HÀM driveToImage) ================= */
-function cleanJSON(t){
-    return JSON.parse(
-        t.replace('/*O_o*/','')
-         .replace('google.visualization.Query.setResponse(','')
-         .slice(0,-2)
-    );
+const cleanJSON = t => JSON.parse(
+  t.replace('/*O_o*/','')
+   .replace('google.visualization.Query.setResponse(','')
+   .slice(0,-2)
+);
+
+/* ================== FETCH DATA ================== */
+async function loadData() {
+  try {
+    const res = await fetch(URL);
+    const txt = await res.text();
+    const json = cleanJSON(txt);
+
+    DATA = json.table.rows.map(r => ({
+      owner: r.c?.[0]?.v || '',
+      phone: r.c?.[1]?.v || '',
+      address: r.c?.[2]?.v || '',
+      image: r.c?.[3]?.v || '',
+      price: r.c?.[4]?.v || '',
+      deposit: r.c?.[5]?.v || '',
+      commission: r.c?.[6]?.v || ''
+    })).filter(i => i.address);
+
+    $('loading').classList.add('hidden');
+    $('search').disabled = false;
+    $('btn').disabled = false;
+
+    render(DATA);
+  } catch (e) {
+    $('loading').innerHTML = '<p class="text-red-600 font-bold">Không thể tải dữ liệu</p>';
+  }
 }
 
-function driveToImage(url){
-    if(!url) return '';
-    const s = url.toString().trim();
+/* ================== RENDER ================== */
+function render(arr) {
+  const box = $('list');
+  box.innerHTML = '';
+  $('empty').classList.add('hidden');
 
-    // Regex tìm kiếm ID sau: /file/d/ hoặc /d/ hoặc id=
-    let fileId = '';
-    const match = s.match(
-        /(?:file\/d\/|d\/|id=)([a-zA-Z0-9_-]{20,})/
-    );
-    
-    if (match) {
-        fileId = match[1];
-    } else if (s.length > 20 && s.match(/^[a-zA-Z0-9_-]+$/)) {
-        // Xử lý trường hợp chuỗi chỉ là ID tệp trực tiếp
-        fileId = s;
-    }
+  if (!arr.length) {
+    box.classList.add('hidden');
+    $('empty').classList.remove('hidden');
+    return;
+  }
 
-    if (!fileId) return '';
+  box.classList.remove('hidden');
 
-    // Trả về URL dạng 'uc?export=view' - Yêu cầu tệp phải được chia sẻ công khai!
-    return `https://drive.google.com/uc?export=view&id=${fileId}`;
+  box.innerHTML = arr.map(i => `
+    <div class="card bg-white p-4 shadow space-y-3">
+
+      <!-- ADDRESS -->
+      <div class="font-semibold text-indigo-700">📍 ${i.address}</div>
+
+      <!-- PHONE -->
+      <div class="flex gap-2 text-sm">
+        <a href="tel:${i.phone}" class="flex-1 bg-green-100 text-green-700 px-3 py-2 rounded-xl text-center">📞 ${i.phone}</a>
+        <button onclick="navigator.clipboard.writeText('${i.phone}')"
+          class="bg-gray-100 px-3 py-2 rounded-xl">📋</button>
+      </div>
+
+      <!-- INFO -->
+      <div class="flex flex-wrap gap-2 text-sm">
+        <span class="badge bg-red-100 text-red-600">Giá: ${i.price}</span>
+        <span class="badge bg-gray-100">Cọc: ${i.deposit}</span>
+        <span class="badge bg-blue-100 text-blue-700">HH: ${i.commission}</span>
+      </div>
+
+      <!-- META -->
+      <div class="flex justify-between items-center text-sm text-gray-500">
+        <span>👤 ${i.owner}</span>
+        ${i.image ? `<a href="${i.image}" target="_blank" class="text-blue-600 underline">📁 Hình ảnh</a>` : ''}
+      </div>
+
+    </div>
+  `).join('');
 }
 
-/* ================= LOAD DATA ================= */
-async function loadData(){
-    try {
-        const res = await fetch(URL);
-        const txt = await res.text();
-        const json = cleanJSON(txt);
+/* ================== SEARCH ================== */
+function search() {
+  const k = $('search').value.toLowerCase().trim();
+  if (!k) return render(DATA);
 
-        DATA = json.table.rows.map(r=>({
-            owner: r.c?.[0]?.v || '',
-            phone: r.c?.[1]?.v || '',
-            address: r.c?.[2]?.v || '',
-            price: r.c?.[3]?.v || '',
-            deposit: r.c?.[4]?.v || '',
-            commission: r.c?.[5]?.v || '',
-            // Lấy 3 liên kết ảnh từ cột H, I, J
-            images: [
-                driveToImage(r.c?.[7]?.v), 
-                driveToImage(r.c?.[8]?.v), 
-                driveToImage(r.c?.[9]?.v)
-            ].filter(Boolean)
-        })).filter(i=>i.address);
-
-        VIEW = [...DATA];
-        $('loading').classList.add('hidden');
-        $('search').disabled = false;
-        $('btn').disabled = false;
-
-        renderText(VIEW);
-        // Sử dụng requestIdleCallback để ưu tiên hiển thị text trước
-        requestIdleCallback(loadImages); 
-    } catch(error) {
-        console.error("Lỗi khi tải hoặc xử lý dữ liệu:", error);
-        $('loading').innerHTML = '<p class="text-red-600">Lỗi: Không thể tải dữ liệu. Vui lòng kiểm tra lại liên kết Google Sheet và quyền truy cập.</p>';
-        $('search').disabled = true;
-        $('btn').disabled = true;
-    }
+  render(
+    DATA.filter(i =>
+      [i.address,i.phone,i.price,i.deposit,i.commission]
+        .join(' ')
+        .toLowerCase()
+        .includes(k)
+    )
+  );
 }
 
-/* ================= RENDER TEXT ================= */
-function renderText(arr){
-    const box = $('list');
-    box.innerHTML = '';
-    $('empty').classList.add('hidden');
-
-    if(!arr.length){
-        box.classList.add('hidden');
-        $('empty').classList.remove('hidden');
-        return;
-    }
-
-    box.classList.remove('hidden');
-    box.innerHTML = arr.map(i=>`
-        <div class="card bg-white p-4 shadow space-y-3"
-            data-images='${JSON.stringify(i.images)}'>
-
-            <div class="grid grid-cols-3 gap-2 imgs"></div>
-
-            <div class="bg-indigo-50 border border-indigo-200 rounded-xl p-3">
-                <div class="text-xs text-indigo-500">ĐỊA CHỈ</div>
-                <div class="font-bold text-indigo-800">${i.address}</div>
-            </div>
-
-            <div class="bg-red-50 border border-red-200 text-red-700 font-extrabold px-3 py-2 rounded-xl text-sm">
-                💰 ${i.price}
-            </div>
-
-            <div class="flex gap-2">
-                <span class="badge bg-gray-100">Cọc ${i.deposit}</span>
-                <span class="badge bg-green-100 text-green-700">HH ${i.commission}</span>
-            </div>
-
-            <a href="tel:${i.phone}" class="block bg-green-600 text-white py-2 rounded-xl text-center font-semibold">
-                📞 ${i.phone}
-            </a>
-
-            <div class="text-sm text-gray-500">👤 ${i.owner}</div>
-        </div>
-    `).join('');
-}
-
-/* ================= LAZY LOAD IMAGES ================= */
-function loadImages(){
-    document.querySelectorAll('.card[data-images]').forEach(card=>{
-        const imgs = JSON.parse(card.dataset.images || '[]');
-        if(!imgs.length) return;
-
-        const box = card.querySelector('.imgs');
-        box.innerHTML = imgs.map(src=>`
-            <div class="thumb" data-src="${src}"></div>
-        `).join('');
-    });
-
-    // Observer để tải ảnh khi cuộn đến
-    const io = new IntersectionObserver(entries=>{
-        entries.forEach(e=>{
-            if(e.isIntersecting){
-                // Lấy URL từ data-src và set làm background image
-                e.target.style.backgroundImage = `url('${e.target.dataset.src}')`;
-                io.unobserve(e.target);
-            }
-        });
-    },{rootMargin:'150px'}); // Tải trước khi vào màn hình 150px
-
-    document.querySelectorAll('.thumb').forEach(t=>io.observe(t));
-}
-
-/* ================= SEARCH ================= */
-function search(){
-    const k = $('search').value.toLowerCase().trim();
-    VIEW = !k ? [...DATA] : DATA.filter(i =>
-        // Tìm kiếm trên các trường Địa chỉ, SĐT, Giá, Cọc, Hoa hồng
-        [i.address,i.phone,i.price,i.deposit,i.commission]
-          .join(' ').toLowerCase().includes(k)
-    );
-    renderText(VIEW);
-    requestIdleCallback(loadImages);
-}
-
-/* ================= IMAGE MODAL ================= */
-let modalImgs=[], modalIdx=0;
-const imgModal=$('imgModal'), modalImg=$('modalImg'), imgCount=$('imgCount');
-
-document.addEventListener('click', e=>{
-    const t = e.target.closest('.thumb');
-    if(!t) return;
-
-    const card = t.closest('.card');
-    modalImgs = JSON.parse(card.dataset.images || '[]');
-    // Tính toán index của ảnh được click
-    modalIdx = [...t.parentNode.children].indexOf(t);
-
-    modalImg.src = modalImgs[modalIdx];
-    imgCount.textContent = `${modalIdx+1}/${modalImgs.length}`;
-    imgModal.classList.remove('hidden');
-});
-
-function closeModal(){
-    imgModal.classList.add('hidden');
-}
-
-/* ================= EVENTS ================= */
+/* ================== EVENTS ================== */
 $('btn').onclick = search;
-$('search').addEventListener('keydown', e=>{
-    if(e.key === 'Enter') search();
-});
+$('search').addEventListener('keydown', e => e.key === 'Enter' && search());
 
-/* ================= INIT ================= */
+/* ================== INIT ================== */
 loadData();
 </script>
 
